--- a/Genealogy.WebApplication/Views/Shared/Scripts/_TableScriptsPartial.cshtml
+++ b/Genealogy.WebApplication/Views/Shared/Scripts/_TableScriptsPartial.cshtml
@@ -12,7 +12,6 @@
 <script src="https://cdn.datatables.net/v/bs5/jszip-3.10.1/dt-1.13.8/b-2.4.2/b-colvis-2.4.2/b-html5-2.4.2/b-print-2.4.2/cr-1.7.0/date-1.5.1/fc-4.3.0/fh-3.4.0/kt-2.11.0/r-2.5.0/rg-1.4.1/rr-1.4.1/sc-2.3.0/sb-1.6.0/sp-2.2.0/sl-1.7.0/sr-1.3.0/datatables.min.js"></script>
 @{
 	var viewProperties = ViewData["PropertiesView"] as CustomViewModel;
-
 }
 @if (User.Identity.IsAuthenticated) {
     if (User.IsInRole(Constants.Roles.SuperAdmin.ToString())) {
@@ -107,6 +106,7 @@
                 //     api.button('Import:name').remove()
                 // }
             },
+
             buttons: [
                 {
                     extend: 'colvis',
@@ -120,7 +120,7 @@
                 {
                     text: '<i class="bi bi-plus-square" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="@SharedTranslations["Nuevo"]"></i> @SharedTranslations["Nuevo"]',
                     action: function (e, dt, button, config) {
-                            GetModal('@viewProperties.ControllerName', 'Create', null);
+                            GetModal('GET','@viewProperties.ControllerName', 'Create', null);
                     },
                     enabled: true,
                     name: 'Create'
@@ -128,7 +128,7 @@
                 {
                     text: '<i class="bi bi-card-text aria-hidden="true" data-toggle="tooltip" data-placement="top" title="@SharedTranslations["Detalle"]"></i> @SharedTranslations["Detalle"]',
                     action: function (e, dt, button, config) {
-                        GetModal('@viewProperties.ControllerName', 'Details', dt.rows({ selected: true }).data()[0].Id);
+                        GetModal('GET','@viewProperties.ControllerName', 'Details', dt.rows({ selected: true }).data()[0].Id);
                     },
                     enabled: false,
                     name: 'Details'
@@ -136,7 +136,7 @@
                 {
                     text: '<i class="bi bi-pencil" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="@SharedTranslations["Editar"]"></i> @SharedTranslations["Editar"]',
                     action: function (e, dt, button, config) {
-                        GetModal('@viewProperties.ControllerName', 'Edit', dt.rows({ selected: true }).data()[0].Id);
+                        GetModal('GET','@viewProperties.ControllerName', 'Edit', dt.rows({ selected: true }).data()[0].Id);
                     },
                     enabled: false,
                     name: 'Edit'
@@ -144,7 +144,7 @@
                 {
                     text: '<i class="bi bi-trash" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="@SharedTranslations["Eliminar"]"></i> @SharedTranslations["Eliminar"]',
                     action: function (e, dt, button, config) {
-                        GetModalPost('@viewProperties.ControllerName', 'Delete', dt.rows({ selected: true }).data()[0].Id);
+                        GetModal('POST', '@viewProperties.ControllerName', 'Delete', dt.rows({ selected: true }).data()[0].Id);
                     },
                     enabled: false,
                     name: 'Delete'
@@ -152,7 +152,7 @@
                 {
                     text: '<i class="bi bi-clipboard" aria-hidden="true" data-toggle="tooltip" data-placement="top" title="@SharedTranslations["Copiar"]"></i> @SharedTranslations["Copiar"]',
                     action: function (e, dt, button, config) {
-                        GetModal('@ViewData["ViewDataControllerName"]', 'Copy', dt.rows({ selected: true }).data()[0].Id);
+                        GetModal('GET','@viewProperties.ControllerName', 'Copy', dt.rows({ selected: true }).data()[0].Id);
                     },
                     enabled: false,
                     name: 'Copy'
